2005-07-14 09:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Implement toolbarSelectableItemIdentifiers
	in the toolbar delegate so that the items will remain selected showing
	the current selection. 

2005-07-14 00:05 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: Removed commented out
	code.
	* Palettes/3Containers/GormNSTableColumnInspector.gorm: Changed
	"Is visible at launch" to NO to prevent exception.

2005-07-13 22:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormButtonEditor.m: Corrected issue with 
	button editing.  bug #13756.

2005-07-13 09:01 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Corrected problem selecting NSObject 
	in browser when it's selected in the outline.

2005-07-13 02:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Changed code in selectClass:editClass:
	to use the methods from the GormClassManager as appropriate.  Removed
	do.. while construct since it did the same thing as 
	allSuperClassesOf in GormClassManager.
	* GormCore/GormClassManager.[hm]: Added new method isRootClass: which
	returns true if the argument is a root class.  Also replaced
	references to @"NSObject" in a number of places with calls to this
	method.  This makes the code more generic.
	* GormCore/GormPalettesManager.m: Added check in 
	importClasses:withDictionary: which should allow loading palettes
	which define root level classes.

2005-07-12  fabien  <fabien@sonappart.net>

	* GormCore/GormClassEditor.m: Fix OutlineView / BrowserView switch 
	Add some warnings.
	Greg please check the code.
	You will need to change it when GormClassManager will
	change ( for root object )
	* Palettes/3Containers/inspector.m : Add minimum column size for 
	NSBrowser
	* Palettes/3Containers/GormNSBrowserInspector.gorm : Ditto

2005-07-11  fabien  <fabien@sonappart.net>
